--- a/src/app/components/tabs/tabs.component.html
+++ b/src/app/components/tabs/tabs.component.html
@@ -1,20 +1,29 @@
 <div class="tabs">
+
+  <a routerLink="/overview">
     <div class="tab">
-        <div class="tab-tile">
-            <mat-icon class="mat-18">bookmark_border</mat-icon>
-            <!-- bookmarks -->
-        </div>
+      <div class="tab-tile">
+        <mat-icon class="mat-18">bookmark_border</mat-icon>
+      </div>
     </div>
+  </a>
+
+
+
+  <a routerLink="/bookmarks">
+
     <div class="tab">
-        <div class="tab-tile">
-            <mat-icon class="mat-18">check</mat-icon>
-            <!-- bookmarks -->
-        </div>
+      <div class="tab-tile">
+        <mat-icon class="mat-18">check</mat-icon>
+      </div>
     </div>
+  </a>
+
+  <a routerLink="/todos">
     <div class="tab">
-        <div class="tab-tile">
-            <mat-icon class="mat-18">notes</mat-icon>
-            <!-- bookmarks -->
-        </div>
+      <div class="tab-tile">
+        <mat-icon class="mat-18">notes</mat-icon>
+      </div>
     </div>
+  </a>
 </div>
