--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,23 @@
 <div class="app-wrapper">
 
 
-    <div class="top-section">
-        <h1>19:00</h1>
-        <h2>9 décembre 2022</h2>
-    </div>
+  <div class="top-section">
+
+    <h1> {{dateTime | date:'HH:mm'}}</h1>
+    <h2> {{dateTime | date:'d MMMM y'}}</h2>
+
+  </div>
 
 
 
 
-    <div class="content-section">
+  <div class="content-section">
 
-        <router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
-    </div>
+  </div>
 
-    <div class="bottom-section">
-        <app-tabs></app-tabs>
-    </div>
+  <div class="bottom-section">
+    <app-tabs></app-tabs>
+  </div>
 </div>
