--- a/src/app/components/todos/todos.component.scss
+++ b/src/app/components/todos/todos.component.scss
@@ -37,20 +37,7 @@
       }
     }
 
-    // // &.completed {
-    // //     .todo-text {
-    // //         color: rgba(white, 0.78);
-    // //     }
 
-    // //     .checkbox {
-    // //         background: rgb(9, 218, 89);
-    // //         border-color: transparent;
-
-    // //         i {
-    // //             opacity: 1;
-    // //         }
-    // //     }
-    // }
   }
 }
 
@@ -61,14 +48,12 @@
 }
 
 .todo-item {
-  // box-shadow: 2vw black;
   cursor: pointer;
 
   padding: 1vh 1.3vh;
   display: flex;
   align-items: center;
   background-color: rgba(black, 0.4);
-  // background-color: rgba(rgb(233, 233, 233), 0.5);
   border-radius: 100px;
   width: 60vw;
   margin: auto;
@@ -98,20 +83,7 @@
     }
   }
 
-  // // &.completed {
-  // //     .todo-text {
-  // //         color: rgba(white, 0.78);
-  // //     }
 
-  // //     .checkbox {
-  // //         background: rgb(9, 218, 89);
-  // //         border-color: transparent;
-
-  // //         i {
-  // //             opacity: 1;
-  // //         }
-  // //     }
-  // }
 }
 
 .container-fluid {
@@ -128,9 +100,6 @@
 
 .listes {
   color: #5e5e5e;
-  // background: url('^/assets/Images/Fond-ecran-overview.png') no-repeat;
-  // background-position: center;
-  // background-size: cover;
   width: 100%;
   height: 100%;
   background-size: cover;
@@ -153,6 +122,8 @@
   }
 
   .container-list {
+    overflow-y: scroll;
+    height: 45vh;
     display: flex;
     justify-content: center;
     box-sizing: border-box;
@@ -160,43 +131,50 @@
     flex-wrap: wrap;
     background: rgba($color: #ffffff, $alpha: 0.1);
     backdrop-filter: blur(4px);
-    padding: 2vh;
-    width: 80vw;
+    padding: 1vw;
+    width: 70vw;
     border-radius: 20px;
 
     .lists {
-      width: 150px;
-      height: 150px;
+      // width: 20vw;
+      height: 20vh;
+      max-width: 150px;
+      max-height: 150px;
       border-radius: 20px;
       background: linear-gradient(45deg, #d1c8f596, #96f6faa8);
       backdrop-filter: blur(4px);
-      box-shadow: px 2px 2px rgba(0, 0, 0, 0.711);
       display: flex;
       justify-content: center;
-      flex-direction: column-reverse;
+      flex-direction: column;
       align-items: center;
       flex-wrap: wrap;
-      margin: 10px;
-      font-size: 20px;
+      margin: 3vw;
+      padding: 1.2vw;
+      font-size: 1.8vh;
       font-weight: 500;
       box-sizing: border-box;
       flex-wrap: wrap;
+
+      p {
+        width: auto;
+        text-align: center;
+      }
     }
 
     .add {
       display: flex;
-      width: 170px;
-      height: 170px;
+      // width: 170px;
+      // height: 170px;
       justify-content: center;
       align-items: center;
+      width: 20vw;
+      margin: 2vw;
 
       .btn {
         width: 70px;
         height: 70px;
-        // box-shadow: 2px 2px 2px rgb(255, 255, 255);
         background: rgba($color: #ffffff, $alpha: 0.4);
         backdrop-filter: blur(4px);
-
         border-radius: 50%;
         border: 2px solid rgba(255, 255, 255, 0.9);
         color: white;
