suppression de components vides

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
 
   </div>
 
-
-
+  <!-- On utilise "router-outlet" pour faire apparaitre les enfants de l'app.component -->
 
   <div class="content-section">
 
@@ -20,4 +19,5 @@
   <div class="bottom-section">
     <app-tabs></app-tabs>
   </div>
+
 </div>
