--- a/src/app/components/bookmarks/bookmarks.component.html
+++ b/src/app/components/bookmarks/bookmarks.component.html
@@ -1,8 +1,18 @@
 <div class="bookmarks-wrapper">
-  <div class="bookmark-title">
-    <img src="http://wikipedia.org/favicon.ico" alt="" srcset="">
 
+  <div class="container">
+
+    <div class="bookmark-tiles-container">
+      <app-bookmark-tile *ngFor="let bookmark of bookmarks" [bookmark]="bookmark"></app-bookmark-tile>
+
+    </div>
+
+    <a routerLink="add" class="btn add-btn">
+    <button mat-raised-button color="accent"  class="btns-container btns-centered">
+        Ajouter
+        <mat-icon class="material-icons-outlined">add</mat-icon>
+      </button>
+    </a>
   </div>
-
 
 </div>
