--- a/src/app/modal/print-modal/print-modal/print-modal.component.html
+++ b/src/app/modal/print-modal/print-modal/print-modal.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <h2>HTML To PDF Angular</h2>
+  <h3>J'imprime ma liste <mat-icon class="mat-18">print</mat-icon></h3>
   <div id="table" class="table table-striped">
 
-      <h3>{{datas.list_title}}</h3>
+    <h2>{{datas.list_title}}</h2>
     <div *ngFor="let item of descArray">
 
       <ul>
@@ -17,9 +17,10 @@
 </div>
 
 
-
-<mat-icon (click)="download()">print <h5>Download PDF</h5> </mat-icon>
-<mat-icon class="mat-18" (click)="closeModal()">close</mat-icon>
+<div class="buttons">
+  <button mat-button (click)="download()">Télécharger </button>
+  <button mat-button color="primary" class="mat-18 cancel d-flex align-self-end" (click)="closeModal()">Annuler</button>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
   integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
