--- a/src/app/modal/add-bookmark/add-bookmark.component.html
+++ b/src/app/modal/add-bookmark/add-bookmark.component.html
@@ -5,13 +5,13 @@
 
     <mat-form-field class="example-full-width" appearance="fill">
       <label class="form-label">Nom</label>
-      <input matInput class="textbox" ngModel #textField="ngModel" name="name" type="text" placeholder="e.g. Wikipedia"
+      <input matInput class="textbox" name="name" type="text" placeholder="e.g. Wikipedia"
         required>
     </mat-form-field>
 
     <mat-form-field class="example-full-width" appearance="fill">
       <label class="form-label">URL</label>
-      <input matInput class="textbox" ngModel #textField="ngModel" name="name" type="text"
+      <input matInput class="textbox" name="url" type="url"
         placeholder="e.g. http://wikipedia.com" required>
     </mat-form-field>
 
