--- a/src/app/components/tabs/tabs.component.scss
+++ b/src/app/components/tabs/tabs.component.scss
@@ -1,47 +1,32 @@
 .tabs {
-    background: rgba($color: #000000, $alpha: 0.1);
+  background: rgba($color: #000000, $alpha: 0.1);
+  display: flex;
+  flex-direction: row;
+  padding: 1vh;
+  border-radius: 2vh;
+  gap: 1vw;
+  backdrop-filter: blur(3px);
+  margin: 1.5vh;
+  margin-top: 5.5vh;
+  justify-content: center;
+  justify-content: space-evenly;
+  margin: auto;
+  width: 21rem;
+  margin-bottom: 2.5vh;
+
+  .tab-tile {
+    border-radius: 1vh;
+    background: linear-gradient(45deg, #f8b5a5, #a6f8fe);
+    cursor: pointer;
+    padding: 2vh;
     display: flex;
-    flex-direction: row;
-    padding: 1vh;
-    border-radius: 2vh;
-    gap: 1vw;
-    backdrop-filter: blur(3px);
 
-    margin: 1.5vh;
-    margin-top: 5.5vh;
-    // &:nth-child(3) {
-    //     border-radius: 50%;
-    // }
-    .tab-tile {
-        border-radius: 1vh;
-        background: linear-gradient(45deg, #f8b5a5, #a6f8fe);
-        cursor: pointer;
-        margin-right: 1.5vw;
-        padding: 2vh;
-        // background: rgba($color: #ffffff, $alpha: 0.2);
-        display: flex;
+    .tab {
 
-        .tab {
-
-
-            position: relative;
-
-            &:not(:last-child) {
-                margin-right: 1.5vw;
-            }
-        }
+      margin: auto;
+      position: relative;
 
     }
-}
 
-// .tab-tile::before {
-//     content: '';
-//     position: absolute;
-//     // top: 0;
-//     // left: 0;
-//     height: 100%;
-//     width: 100%;
-//     background: rgba(violet, 0.5);
-//     // border-radius: 1vh;
-//     // background: linear-gradient(45deg, #f8b5a5, #e2d2fd);
-// }
+  }
+}
